--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/storage": "2.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-camera": "4.1.0",
+    "cordova-sqlite-storage": "^3.2.1",
     "firebase": "^6.3.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
@@ -57,7 +58,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
